--- a/Assignment_3/Assignment_3.tex
+++ b/Assignment_3/Assignment_3.tex
@@ -279,19 +279,19 @@ Find X and Y, if
 \end{align}
 Now, expressing the matrices \eqref{eq:xplusy}, \eqref{eq:xminusy} in vector form, 
 \begin{align}
-    \myvec{1 & 1} \myvec{X \\ Y} = A \nonumber\\
-    \myvec{1 & -1} \myvec{X \\ Y} = B \nonumber
+    \myvec{I & I} \myvec{X \\ Y} = A \nonumber\\
+    \myvec{I & -I} \myvec{X \\ Y} = B \nonumber
 \end{align}
 Combining both the equations into a single matrix equation and constructing the augmented matrix,
 \begin{align} \label{eq:augmented_1}
-    \myvec{1 & 1 & A \\ 1 & -1 & B} 
+    \myvec{I & I & A \\ I & -I & B} 
 \end{align}
 Transforming the equation \eqref{eq:augmented_1} using row reduction,
 \begin{align}
-    \myvec{1 & 1 & A \\ 1 & -1 & B} \xleftrightarrow[]{R2\leftarrow\frac{R1+R2}{2}} \myvec{1 & 1 & A \\ 1 & 0 & \frac{A+B}{2}} \xleftrightarrow[]{R1\leftarrow R1-R2} \nonumber
+    \myvec{I & I & A \\ I & -I & B} \xleftrightarrow[]{R2\leftarrow\frac{R1+R2}{2}} \myvec{1 & 1 & A \\ 1 & 0 & \frac{A+B}{2}} \xleftrightarrow[]{R1\leftarrow R1-R2} \nonumber
 \end{align}
 \begin{align} \label{eq:rowreduce_1}
-    \myvec{0 & 1 & \frac{A-B}{2} \\ 1 & 0 & \frac{A+B}{2}}
+    \myvec{0 & I & \frac{A-B}{2} \\ I & 0 & \frac{A+B}{2}}
 \end{align}
 From \eqref{eq:rowreduce_1},
 \begin{align}
@@ -308,19 +308,19 @@ From \eqref{eq:rowreduce_1},
 \end{align}
 Now, expressing the matrices \eqref{eq:2xplus3y}, \eqref{eq:3xplus2y} in vector form, 
 \begin{align}
-    \myvec{2 & 3} \myvec{X \\ Y} = A \nonumber\\
-    \myvec{3 & 2} \myvec{X \\ Y} = B \nonumber
+    \myvec{2I & 3I} \myvec{X \\ Y} = A \nonumber\\
+    \myvec{3I & 2I} \myvec{X \\ Y} = B \nonumber
 \end{align}
 Combining both the equations into a single matrix equation and constructing the augmented matrix,
 \begin{align} \label{eq:augmented_2}
-    \myvec{2 & 3 & A \\ 3 & 2 & B} 
+    \myvec{2I & 3I & A \\ 3I & 2I & B} 
 \end{align}
 Transforming the equation \eqref{eq:augmented_2} using row reduction,
 \begin{align}
-    \myvec{2 & 3 & A \\ 3 & 2 & B} \xleftrightarrow[]{R2 \leftarrow \frac{3R1-2R2}{5}} \myvec{2 & 3 & A \\ 0 & 1 & \frac{3A-2B}{5}} \xleftrightarrow[]{R1 \leftarrow \frac{R1-3R2}{2}} \nonumber
+    \myvec{2I & 3I & A \\ 3I & 2I & B} \xleftrightarrow[]{R2 \leftarrow \frac{3R1-2R2}{5}} \myvec{2I & 3I & A \\ 0 & I & \frac{3A-2B}{5}} \xleftrightarrow[]{R1 \leftarrow \frac{R1-3R2}{2}} \nonumber
 \end{align}
 \begin{align} \label{eq:rowreduce_2}
-    \myvec{1 & 0 & \frac{3B-2A}{5} \\ 0 & 1 & \frac{3A-2B}{5}}
+    \myvec{I & 0 & \frac{3B-2A}{5} \\ 0 & I & \frac{3A-2B}{5}}
 \end{align}
 From \eqref{eq:rowreduce_2},
 \begin{align}
