--- a/Assignment_5/Assignment_5.tex
+++ b/Assignment_5/Assignment_5.tex
@@ -267,9 +267,6 @@ Consider 2 matrices,
 \end{align}
 The cross product of the 2 matrices is,
 \begin{align}
-    \vec{a} \times \vec{b} = \myvec{i & j & k \\ a_1 & a_2 & a_3 \\ b_1 & b_2 & b_3} \nonumber 
+    \vec{a} \times \vec{b} = \myvec{0 & -a_3 & a_2 \\ a_3 & 0 & -a_1 \\ -a_2 & a_1 & 0} \myvec{b_1 \\ b_2 \\ b_3} 
 \end{align} 
-\begin{align}
-    \vec{a} \times \vec{b} =  \myvec{a_2b_3 - a_3b_2 & a_3b_1 - a_1b_3 & a_1b_2 - a_2b_1}
-\end{align}
 \end{document}
