--- a/Assignment_5/Assignment_5_triangle.tex
+++ b/Assignment_5/Assignment_5_triangle.tex
@@ -3,7 +3,7 @@
 \usepackage{tikz,pgf} %and any other packages or tikzlibraries your picture needs
 
 \begin{document}
-\resizebox{5cm}{!}{
+\resizebox{5cm}{5cm}{
 \begin{tikzpicture}
 \draw (0,0) node[anchor=north]{$B (0,0)$}
   -- (2,4) node[anchor=west]{$A (a_1,a_2)$}
