--- a/Assignment_5/Assignment_5.tex
+++ b/Assignment_5/Assignment_5.tex
@@ -281,12 +281,12 @@ Substituting $a_3 = b_3 = 0$ in \eqref{eq:eq_1} and simplifying,
 \renewcommand{\thefigure}{1}
 \begin{figure}[!ht] \label{fig:triangle_abc}
 \centering
-\resizebox{5cm}{!}{\input{Assignment_5_triangle.tex}}
+\resizebox{5cm}{!}{\input{Assignment_5_Triangle.tex}}
 \caption{$\triangle ABC$ with B at origin}
 \end{figure} \\
 Considering three points on a triangle as,
 \begin{align}
-    \vec{A}=\myvec{a_1 & a_2}, \vec{B} = \myvec{0 & 0}, \vec{C} = \myvec{c_1 & c_2}
+    \vec{A}=\myvec{a_1 \\ a_2}, \vec{B} = \myvec{0 \\ 0}, \vec{C} = \myvec{c_1 \\ c_2}
 \end{align}
 \begin{align}
     \vec{A} - \vec{B} = \myvec{a_1 \\ a_2} - \myvec{0 \\ 0} = \myvec{a_1 \\ a_2} = \vec{A} \label{eq:eq_4}\\
@@ -298,6 +298,13 @@ Area of triangle is,
 \end{align}
 Substituting \eqref{eq:eq_4}, \eqref{eq:eq_5} in \eqref{eq:eq_6},
 \begin{align}
-    Area(\triangle ABC) = \frac{1}{2}\norm{\vec{A} \times \vec{C}}
+    \implies Area(\triangle ABC) = \frac{1}{2}\norm{\vec{A} \times \vec{C}}
 \end{align}
+Constructing another triangle DBC with base as BC,
+\renewcommand{\thefigure}{2}
+\begin{figure}[!ht] \label{fig:triangle_abc}
+\centering
+\resizebox{5cm}{!}{\input{Assignment_5_TwoTriangles.tex}}
+\caption{$\triangle ABC$ and $\triangle DBC$ with BC as common base}
+\end{figure}
 \end{document}
