--- a/Assignment_5/Assignment_5.tex
+++ b/Assignment_5/Assignment_5.tex
@@ -281,9 +281,9 @@ Substituting $a_3 = b_3 = 0$ in \eqref{eq:eq_1} and simplifying,
 \renewcommand{\thefigure}{1}
 \begin{figure}[!ht] \label{fig:triangle_abc}
 \centering
-\resizebox{5cm}{!}{\input{Assignment_5_triangle.tex}}
+\resizebox{\columnwidth}{!}{\input{Assignment_5_triangle.tex}}
 \caption{$\triangle ABC$ with B at origin}
-\end{figure} \\
+\end{figure} 
 Considering three points $\vec{A},\vec{B},\vec{C}$ on a triangle and $\vec{B}$ at origin,
 \begin{align}
     \vec{A} - \vec{B} = \vec{A} \label{eq:eq_4}\\
@@ -301,7 +301,7 @@ Constructing another triangle DBC with base as BC,
 \renewcommand{\thefigure}{2}
 \begin{figure}[!ht] \label{fig:triangle_abc}
 \centering
-\resizebox{5cm}{!}{\input{Assignment_5_TwoTriangles.tex}}
+\resizebox{\columnwidth}{!}{\input{Assignment_5_TwoTriangles.tex}}
 \caption{$\triangle ABC$ and $\triangle DBC$ with BC as common base}
 \end{figure} \\
 Since AD $\parallel$ BC,
