--- a/Assignment_6/Assignment_6.tex
+++ b/Assignment_6/Assignment_6.tex
@@ -1,1 +1,395 @@
-Will be replaced
+\documentclass[journal,12pt,twocolumn]{IEEEtran}
+%
+\usepackage{setspace}
+\usepackage{gensymb}
+%\doublespacing
+\singlespacing
+
+%\usepackage{graphicx}
+%\usepackage{amssymb}
+%\usepackage{relsize}
+\usepackage[cmex10]{amsmath}
+%\usepackage{amsthm}
+%\interdisplaylinepenalty=2500
+%\savesymbol{iint}
+%\usepackage{txfonts}
+%\restoresymbol{TXF}{iint}
+%\usepackage{wasysym}
+\usepackage{amsthm}
+%\usepackage{iithtlc}
+\usepackage{mathrsfs}
+\usepackage{txfonts}
+\usepackage{stfloats}
+\usepackage{bm}
+\usepackage{cite}
+\usepackage{cases}
+\usepackage{subfig}
+%\usepackage{xtab}
+\usepackage{longtable}
+\usepackage{multirow}
+%\usepackage{algorithm}
+%\usepackage{algpseudocode}
+\usepackage{enumitem}
+\usepackage{mathtools}
+\usepackage{steinmetz}
+\usepackage{tikz}
+\usepackage{circuitikz}
+\usepackage{verbatim}
+\usepackage{tfrupee}
+\usepackage[breaklinks=true]{hyperref}
+%\usepackage{stmaryrd}
+\usepackage{tkz-euclide} % loads  TikZ and tkz-base
+%\usetkzobj{all}
+\usetikzlibrary{calc,math}
+\usepackage{listings}
+    \usepackage{color}                                            %%
+    \usepackage{array}                                            %%
+    \usepackage{longtable}                                        %%
+    \usepackage{calc}                                             %%
+    \usepackage{multirow}                                         %%
+    \usepackage{hhline}                                           %%
+    \usepackage{ifthen}                                           %%
+  %optionally (for landscape tables embedded in another document): %%
+    \usepackage{lscape}     
+\usepackage{multicol}
+\usepackage{chngcntr}
+\usepackage{romannum}
+%\usepackage{enumerate}
+%\usepackage{wasysym}
+%\newcounter{MYtempeqncnt}
+\DeclareMathOperator*{\Res}{Res}
+%\renewcommand{\baselinestretch}{2}
+\renewcommand\thesection{\arabic{section}}
+\renewcommand\thesubsection{\thesection.\arabic{subsection}}
+\renewcommand\thesubsubsection{\thesubsection.\arabic{subsubsection}}
+
+\renewcommand\thesectiondis{\arabic{section}}
+\renewcommand\thesubsectiondis{\thesectiondis.\arabic{subsection}}
+\renewcommand\thesubsubsectiondis{\thesubsectiondis.\arabic{subsubsection}}
+
+% correct bad hyphenation here
+\hyphenation{op-tical net-works semi-conduc-tor}
+\def\inputGnumericTable{}                                 %%
+
+\lstset{
+%language=C,
+frame=single, 
+breaklines=true,
+columns=fullflexible
+}
+%\lstset{
+%language=tex,
+%frame=single, 
+%breaklines=true
+%}
+
+\begin{document}
+%
+
+
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{problem}{Problem}
+\newtheorem{proposition}{Proposition}[section]
+\newtheorem{lemma}{Lemma}[section]
+\newtheorem{corollary}[theorem]{Corollary}
+\newtheorem{example}{Example}[section]
+\newtheorem{definition}[problem]{Definition}
+%\newtheorem{thm}{Theorem}[section] 
+%\newtheorem{defn}[thm]{Definition}
+%\newtheorem{algorithm}{Algorithm}[section]
+%\newtheorem{cor}{Corollary}
+\newcommand{\BEQA}{\begin{eqnarray}}
+\newcommand{\EEQA}{\end{eqnarray}}
+\newcommand{\define}{\stackrel{\triangle}{=}}
+\bibliographystyle{IEEEtran}
+%\bibliographystyle{ieeetr}
+\providecommand{\mbf}{\mathbf}
+\providecommand{\pr}[1]{\ensuremath{\Pr\left(#1\right)}}
+\providecommand{\qfunc}[1]{\ensuremath{Q\left(#1\right)}}
+\providecommand{\sbrak}[1]{\ensuremath{{}\left[#1\right]}}
+\providecommand{\lsbrak}[1]{\ensuremath{{}\left[#1\right.}}
+\providecommand{\rsbrak}[1]{\ensuremath{{}\left.#1\right]}}
+\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
+\providecommand{\lbrak}[1]{\ensuremath{\left(#1\right.}}
+\providecommand{\rbrak}[1]{\ensuremath{\left.#1\right)}}
+\providecommand{\cbrak}[1]{\ensuremath{\left\{#1\right\}}}
+\providecommand{\lcbrak}[1]{\ensuremath{\left\{#1\right.}}
+\providecommand{\rcbrak}[1]{\ensuremath{\left.#1\right\}}}
+\theoremstyle{remark}
+\newtheorem{rem}{Remark}
+\newcommand{\sgn}{\mathop{\mathrm{sgn}}}
+\providecommand{\abs}[1]{\left\vert#1\right\vert}
+\providecommand{\res}[1]{\Res\displaylimits_{#1}} 
+\providecommand{\norm}[1]{\left\lVert#1\right\rVert}
+%\providecommand{\norm}[1]{\lVert#1\rVert}
+\providecommand{\mtx}[1]{\mathbf{#1}}
+\providecommand{\mean}[1]{E\left[ #1 \right]}
+\providecommand{\fourier}{\overset{\mathcal{F}}{ \rightleftharpoons}}
+%\providecommand{\hilbert}{\overset{\mathcal{H}}{ \rightleftharpoons}}
+\providecommand{\system}{\overset{\mathcal{H}}{ \longleftrightarrow}}
+	%\newcommand{\solution}[2]{\textbf{Solution:}{#1}}
+\newcommand{\solution}{\noindent \textbf{Solution: }}
+\newcommand{\cosec}{\,\text{cosec}\,}
+\providecommand{\dec}[2]{\ensuremath{\overset{#1}{\underset{#2}{\gtrless}}}}
+\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
+\newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
+%\numberwithin{equation}{section}
+\numberwithin{equation}{subsection}
+%\numberwithin{problem}{section}
+%\numberwithin{definition}{section}
+\makeatletter
+\@addtoreset{figure}{problem}
+\makeatother
+\let\StandardTheFigure\thefigure
+\let\vec\mathbf
+%\renewcommand{\thefigure}{\theproblem.\arabic{figure}}
+\renewcommand{\thefigure}{\theproblem}
+%\setlist[enumerate,1]{before=\renewcommand\theequation{\theenumi.\arabic{equation}}
+%\counterwithin{equation}{enumi}
+%\renewcommand{\theequation}{\arabic{subsection}.\arabic{equation}}
+\def\putbox#1#2#3{\makebox[0in][l]{\makebox[#1][l]{}\raisebox{\baselineskip}[0in][0in]{\raisebox{#2}[0in][0in]{#3}}}}
+     \def\rightbox#1{\makebox[0in][r]{#1}}
+     \def\centbox#1{\makebox[0in]{#1}}
+     \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
+     \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
+\vspace{3cm}
+\title{Matrix theory Assignment 6}
+\author{K R Sai Pranav}
+%\title{
+%	\logo{Matrix Analysis through Octave}{\begin{center}\includegraphics[scale=.24]{tlc}\end{center}}{}{HAMDSP}
+%}
+% paper title
+% can use linebreaks \\ within to get better formatting as desired
+%\title{Matrix Analysis through Octave}
+%
+%
+% author names and IEEE memberships
+% note positions of commas and nonbreaking spaces ( ~ ) LaTeX will not break
+% a structure at a ~ so this keeps an author's name from being broken across
+% two lines.
+% use \thanks{} to gain access to the first footnote area
+% a separate \thanks must be used for each paragraph as LaTeX2e's \thanks
+% was not built to handle multiple paragraphs
+%
+%\author{<-this % stops a space
+%\thanks{}}
+%}
+% note the % following the last \IEEEmembership and also \thanks - 
+% these prevent an unwanted space from occurring between the last author name
+% and the end of the author line. i.e., if you had this:
+% 
+% \author{....lastname \thanks{...} \thanks{...} }
+%                     ^------------^------------^----Do not want these spaces!
+%
+% a space would be appended to the last name and could cause every name on that
+% line to be shifted left slightly. This is one of those "LaTeX things". For
+% instance, "\textbf{A} \textbf{B}" will typeset as "A B" not "AB". To get
+% "AB" then you have to do: "\textbf{A}\textbf{B}"
+% \thanks is no different in this regard, so shield the last } of each \thanks
+% that ends a line with a % and do not let a space in before the next \thanks.
+% Spaces after \IEEEmembership other than the last one are OK (and needed) as
+% you are supposed to have spaces between the names. For what it is worth,
+% this is a minor point as most people would not even notice if the said evil
+% space somehow managed to creep in.
+% The paper headers
+%\markboth{Journal of \LaTeX\ Class Files,~Vol.~6, No.~1, January~2007}%
+%{Shell \MakeLowercase{\textit{et al.}}: Bare Demo of IEEEtran.cls for Journals}
+% The only time the second header will appear is for the odd numbered pages
+% after the title page when using the twoside option.
+% 
+% *** Note that you probably will NOT want to include the author's ***
+% *** name in the headers of peer review papers.                   ***
+% You can use \ifCLASSOPTIONpeerreview for conditional compilation here if
+% you desire.
+% If you want to put a publisher's ID mark on the page you can do it like
+% this:
+%\IEEEpubid{0000--0000/00\$00.00~\copyright~2007 IEEE}
+% Remember, if you use this you must call \IEEEpubidadjcol in the second
+% column for its text to clear the IEEEpubid mark.
+% make the title area
+\maketitle
+\newpage
+%\tableofcontents
+\bigskip
+\renewcommand{\thefigure}{\theenumi}
+\renewcommand{\thetable}{\theenumi}
+\renewcommand{\labelenumi}{(\theenumi)}
+%\renewcommand{\theequation}{\theenumi}
+%\begin{abstract}
+%%\boldmath
+%In this letter, an algorithm for evaluating the exact analytical bit error rate  (BER)  for the piecewise linear (PL) combiner for  multiple relays is presented. Previous results were available only for upto three relays. The algorithm is unique in the sense that  the actual mathematical expressions, that are prohibitively large, need not be explicitly obtained. The diversity gain due to multiple relays is shown through plots of the analytical BER, well supported by simulations. 
+%
+%\end{abstract}
+% IEEEtran.cls defaults to using nonbold math in the Abstract.
+% This preserves the distinction between vectors and scalars. However,
+% if the journal you are submitting to favors bold math in the abstract,
+% then you can use LaTeX's standard command \boldmath at the very start
+% of the abstract to achieve this. Many IEEE journals frown on math
+% in the abstract anyway.
+% Note that keywords are not normally used for peerreview papers.
+%\begin{IEEEkeywords}
+%Cooperative diversity, decode and forward, piecewise linear
+%\end{IEEEkeywords}
+% For peer review papers, you can put extra information on the cover
+% page as needed:
+% \ifCLASSOPTIONpeerreview
+% \begin{center} \bfseries EDICS Category: 3-BBND \end{center}
+% \fi
+%
+% For peerreview papers, this IEEEtran command inserts a page break and
+% creates the second title. It will be ignored for other modes.
+%\IEEEpeerreviewmaketitle
+\begin{abstract}
+This document solves for the angle between a pair of straight lines
+\end{abstract}
+Download all python codes from 
+%
+\begin{lstlisting}
+https://github.com/saipranavkr/EE5609/codes
+\end{lstlisting}
+%
+and latex-tikz codes from 
+%
+\begin{lstlisting}
+https://github.com/saipranavkr/EE5609
+\end{lstlisting}
+%
+\renewcommand{\theenumi}{\roman{enumi}}%
+\section{Problem}
+Prove that the following equation represents two straight lines; find also their point of intersection and the angle between them
+\begin{align} 
+    6y^{2}-xy-x^{2}+30y+36=0 \nonumber
+\end{align}
+%
+%
+\section{Concept}
+The general second order equation is given by,
+\begin{align} \label{eq:c1}
+    ax^2+2bxy+cy^2+2dx+2ey+f=0 
+\end{align}
+The above equation \eqref{eq:c1} can be expressed as
+\begin{align} \label{eq:c2}
+    \vec{x}^T\vec{V}\vec{x}+2\vec{u}^T\vec{x}+f=0
+\end{align}
+where
+\begin{align}
+    \vec{V}=\vec{V}^T&=\myvec{a & b \\ b & c} \label{eq:c3}\\
+    \vec{u}&=\myvec{d \\ e} \label{eq:c4}
+\end{align}
+The above equation \eqref{eq:c2} represents a pair of straight lines if
+\begin{align} \label{eq:c5}
+    \mydet{\vec{V} & \vec{u} \\ \vec{u}^T & f} = 0
+\end{align}
+
+\section{Solution}
+Given equation is,
+\begin{align} \label{eq:eq_1}
+    x^{2}+xy-6y^{2}-30y-36=0 
+\end{align}
+Comparing \eqref{eq:eq_1} with \eqref{eq:c1}, 
+\begin{align} \label{eq:eq_2}
+    a=1;b=\frac{1}{2};c=-6;d=0;e=-15;f=-36  
+\end{align}
+\begin{align} \label{eq:eq_3}
+    \vec{V} = \myvec{1 & \frac{1}{2} \\ \frac{1}{2} & -6} \quad \vec{u} = \myvec{0 \\ -15} 
+\end{align}
+Substituting values from \eqref{eq:eq_2} and \eqref{eq:eq_3} in \eqref{eq:c2},
+\begin{align} \label{eq:eq_4}
+    \vec{x}^T\myvec{1 & \frac{1}{2} \\ \frac{1}{2} & -6}\vec{x} +2\myvec{0 & -15}\vec{x}-36=0
+\end{align}
+Substituting values from \eqref{eq:eq_2} and \eqref{eq:eq_3} in \eqref{eq:c5} to prove \eqref{eq:eq_1} represents a pair of straight lines,
+\begin{align} 
+    D = \mydet{1 & \frac{1}{2} & 0 \\ \frac{1}{2} & -6 & -15 \\ 0 & -15 & -36} \nonumber
+\end{align}
+Solving the determinant,
+\begin{align} \label{eq:eq_5}
+    D = 0
+\end{align}
+From \eqref{eq:eq_5}, it can be observed that \eqref{eq:eq_1} represents a pair of straight lines
+\begin{align} \label{eq:eq_6}
+    Det(\vec{V}) = \mydet{1 & \frac{1}{2} \\ \frac{1}{2} & -6} = \frac{-25}{4} < 0
+\end{align}
+\eqref{eq:eq_6} indicates that the pair of straight lines do intersect. 
+Now, Let the pair of straight lines in vector form be given by,
+\begin{align}
+    \vec{n_1}^T\vec{x}=c_1 \label{eq:eq_7}\\
+    \vec{n_2}^T\vec{x}=c_2 \label{eq:eq_8}
+\end{align}
+Equating their product with \eqref{eq:eq_4},
+\begin{align} 
+    (\vec{n_1}^T\vec{x}-c_1)(\vec{n_2}^T\vec{x}-c_2)=\vec{x}^T\myvec{1 & \frac{1}{2} \\ \frac{1}{2} & -6}\vec{x} \nonumber \\+2\myvec{0 & -15}\vec{x}-36 \label{eq:eq_9}
+\end{align}
+\begin{align}
+    \implies \vec{n_1} * \vec{n_2} = \myvec{1 \\ 1 \\ -6} \label{eq:eq_10} \\
+    c_2\vec{n_1}+c_1\vec{n_2} = -2\myvec{0 \\ -15} \label{eq:eq_11} \\
+    c_1c_2 = -36 \label{eq:eq_12}
+\end{align}
+\renewcommand{\thefigure}{1}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=\columnwidth]{Assignment_6_Plot.png}
+    \caption{Pair of straight lines}
+    \label{Fig:1}
+\end{figure} \\
+The slopes of the lines are given by the polynomials,
+\begin{align}
+    cm^2+2bm+a=0 \nonumber \\
+    m_i = \frac{-b\pm \sqrt{-\mydet{\vec{V}}}}{c} \label{eq:eq_13} \\
+    \vec{n}_i = k_i\myvec{-m_i \\ 1}, \quad i=1,2 \label{eq:eq_14}
+\end{align}
+Substituting \eqref{eq:eq_2}, \eqref{eq:eq_3} values in the above equations,
+\begin{align}
+    -6m^2+m+1=0 \nonumber \\
+    \implies m_i = \frac{\frac{-1}{2}\pm \frac{5}{2}}{-6} \nonumber \\
+    \implies m_1 = \frac{1}{2}; \quad m_2 = \frac{-1}{3} \label{eq:eq_15}
+\end{align}
+Substituting \eqref{eq:eq_15} values in \eqref{eq:eq_14},
+\begin{align}
+    \vec{n}_1=k_1\myvec{\frac{-1}{2} \\ 1}; \quad \vec{n}_2=k_2\myvec{\frac{1}{3} \\ 1} \label{eq:eq_16}
+\end{align}
+Substituting \eqref{eq:eq_16} values in \eqref{eq:eq_10} and solving,
+\begin{align}
+    k_1k_2=-6 \nonumber
+\end{align}
+Taking $k_1 = 2$ and $k_2 = -3$ and simplifying \eqref{eq:eq_16},
+\begin{align} \label{eq:eq_17}
+    \vec{n}_1 = \myvec{-1 \\ 2}; \quad \vec{n}_2 = \myvec{-1 \\ -3} 
+\end{align}
+To verify if the values of $\vec{n}_1 \vec{n}_2$ we compute convolution,
+\begin{align}
+    \vec{n}_1*\vec{n}_2=\myvec{-1 & 0 \\ 2 & -1 \\ 0 & 2}\myvec{-1 \\ -3} = \myvec{1 \\ 1 \\ -6} \label{eq:eq_18}
+\end{align}
+It can be observed that \eqref{eq:eq_18} is equal to \eqref{eq:eq_10}
+From \eqref{eq:eq_11},
+\begin{align}
+    \myvec{\vec{n}_1 & \vec{n}_2}\myvec{c_2 \\ c_1} = -2\myvec{0 \\ -15} \nonumber \\
+    \implies \myvec{-1 & -1 \\ 2 & -3}\myvec{c_2 \\ c_1} = -2\myvec{0 \\ -15} \label{eq:eq_19}
+\end{align}
+Converting \eqref{eq:eq_19} into row reduced echelon form,
+\begin{align}
+    \implies \myvec{1 & 0 \\ 0 & 1}\myvec{c_2 \\ c_1} = \myvec{-6 \\ 6} \nonumber\\
+    \implies c_1 = -6; \quad c_2 = 6 \label{eq:eq_20}
+\end{align}
+\eqref{eq:eq_7} and \eqref{eq:eq_8} can be rewritten as,
+\begin{align}
+    \myvec{-1 & 2}\vec{x} = -6 \\
+    \myvec{-1 & -3}\vec{x} = 6
+\end{align}
+
+\section{Angle between the straight lines}
+Angle between pair of lines is,
+\begin{align}
+    \theta = \cos^{-1}\biggl(\frac{\vec{n_1}^T\vec{n_2}}{\norm{\vec{n_1}}\norm{\vec{n_2}}}\biggr) \label{eq:a1}
+\end{align}
+\begin{align}
+    \vec{n}_1^T\vec{n}_2 = \myvec{-1 & 2}\myvec{-1 \\ -3} = -5 \label{eq:a2} 
+\end{align}
+\begin{align}
+    \norm{\vec{n}_1}=\sqrt{1+4}=\sqrt{5}; \quad \norm{\vec{n}_2}=\sqrt{1+9}=\sqrt{10} \label{eq:a3}
+\end{align}
+Substituting the values from \eqref{eq:a3} and \eqref{eq:a2} in \eqref{eq:a1}
+\begin{align}
+    \theta = 135^{\circ}
+\end{align}
+Hence, angle between the given pair of straight lines is $135^{\circ}$
+\end{document}
