--- a/Assignment_6/Assignment_6.tex
+++ b/Assignment_6/Assignment_6.tex
@@ -262,29 +262,25 @@ Prove that the following equation represents two straight lines; find also their
 \end{align}
 %
 %
-\section{Concept}
+
+\section{Solution}
+Given equation is,
+\begin{align} \label{eq:eq_1}
+    x^{2}+xy-6y^{2}-30y-36=0 
+\end{align}
+
 The general second order equation is given by,
 \begin{align} \label{eq:c1}
     ax^2+2bxy+cy^2+2dx+2ey+f=0 
-\end{align}
-The above equation \eqref{eq:c1} can be expressed as
-\begin{align} \label{eq:c2}
-    \vec{x}^T\vec{V}\vec{x}+2\vec{u}^T\vec{x}+f=0
 \end{align}
 where
 \begin{align}
     \vec{V}=\vec{V}^T&=\myvec{a & b \\ b & c} \label{eq:c3}\\
     \vec{u}&=\myvec{d \\ e} \label{eq:c4}
 \end{align}
-The above equation \eqref{eq:c2} represents a pair of straight lines if
-\begin{align} \label{eq:c5}
-    \mydet{\vec{V} & \vec{u} \\ \vec{u}^T & f} = 0
-\end{align}
-
-\section{Solution}
-Given equation is,
-\begin{align} \label{eq:eq_1}
-    x^{2}+xy-6y^{2}-30y-36=0 
+The equation \eqref{eq:c1} can be expressed as
+\begin{align} \label{eq:c2}
+    \vec{x}^T\vec{V}\vec{x}+2\vec{u}^T\vec{x}+f=0
 \end{align}
 Comparing \eqref{eq:eq_1} with \eqref{eq:c1}, 
 \begin{align} \label{eq:eq_2}
@@ -292,6 +288,10 @@ Comparing \eqref{eq:eq_1} with \eqref{eq:c1},
 \end{align}
 \begin{align} \label{eq:eq_3}
     \vec{V} = \myvec{1 & \frac{1}{2} \\ \frac{1}{2} & -6} \quad \vec{u} = \myvec{0 \\ -15} 
+\end{align}
+The equation \eqref{eq:c2} represents a pair of straight lines if
+\begin{align} \label{eq:c5}
+    \mydet{\vec{V} & \vec{u} \\ \vec{u}^T & f} = 0
 \end{align}
 Substituting values from \eqref{eq:eq_2} and \eqref{eq:eq_3} in \eqref{eq:c2},
 \begin{align} \label{eq:eq_4}
@@ -320,7 +320,9 @@ Equating their product with \eqref{eq:eq_4},
     (\vec{n_1}^T\vec{x}-c_1)(\vec{n_2}^T\vec{x}-c_2)=\vec{x}^T\myvec{1 & \frac{1}{2} \\ \frac{1}{2} & -6}\vec{x} \nonumber \\+2\myvec{0 & -15}\vec{x}-36 \label{eq:eq_9}
 \end{align}
 \begin{align}
-    \implies \vec{n_1} * \vec{n_2} = \myvec{1 \\ 1 \\ -6} \label{eq:eq_10} \\
+    \implies \vec{n_1} * \vec{n_2} = \myvec{1 \\ 1 \\ -6} \label{eq:eq_10} 
+\end{align}    
+\begin{align}
     c_2\vec{n_1}+c_1\vec{n_2} = -2\myvec{0 \\ -15} \label{eq:eq_11} \\
     c_1c_2 = -36 \label{eq:eq_12}
 \end{align}
@@ -355,7 +357,7 @@ Taking $k_1 = 2$ and $k_2 = -3$ and simplifying \eqref{eq:eq_16},
 \begin{align} \label{eq:eq_17}
     \vec{n}_1 = \myvec{-1 \\ 2}; \quad \vec{n}_2 = \myvec{-1 \\ -3} 
 \end{align}
-To verify if the values of $\vec{n}_1 \vec{n}_2$ we compute convolution,
+To verify if the values of $\vec{n}_1 \vec{n}_2$ we compute convolution by representing $\vec{n}_1$ as Toeplitz matrix,
 \begin{align}
     \vec{n}_1*\vec{n}_2=\myvec{-1 & 0 \\ 2 & -1 \\ 0 & 2}\myvec{-1 \\ -3} = \myvec{1 \\ 1 \\ -6} \label{eq:eq_18}
 \end{align}
@@ -367,7 +369,7 @@ From \eqref{eq:eq_11},
 \end{align}
 Converting \eqref{eq:eq_19} into row reduced echelon form,
 \begin{align}
-    \implies \myvec{1 & 0 \\ 0 & 1}\myvec{c_2 \\ c_1} = \myvec{-6 \\ 6} \nonumber\\
+    \implies \myvec{1 & 0 \\ 0 & 1}\myvec{c_2 \\ c_1} = \myvec{6 \\ -6} \nonumber\\
     \implies c_1 = -6; \quad c_2 = 6 \label{eq:eq_20}
 \end{align}
 \eqref{eq:eq_7} and \eqref{eq:eq_8} can be rewritten as,
