--- a/Assignment_10/Assignment_10.tex
+++ b/Assignment_10/Assignment_10.tex
@@ -290,5 +290,5 @@ where,
 \begin{align}
     \vec{R} = \myvec{\vec{I} & \vec{0} \\ \vec{0} & \vec{0}} \nonumber 
 \end{align}
-$\vec{I}$ is an identity matrix and $\vec{0}$ represents a block of zeroes. $\vec{R}$ in \eqref{eq:eq_4} is in both row and column reduced echelon form. Hence proved.
+$\vec{I}$ is an identity matrix and $\vec{0}$ represents a block of zeroes. $\vec{Q}$ is a upper triangular matrix. $\vec{R}$ in \eqref{eq:eq_4} is in both row and column reduced echelon form. Hence proved.
 \end{document}
