--- a/Assignment_11/Assignment_11.tex
+++ b/Assignment_11/Assignment_11.tex
@@ -275,6 +275,10 @@ Now,
     a(\alpha + \beta) + b(\beta + \gamma) + c(\gamma + \alpha) = 0 \label{eq:eq_4} \\
     \implies (a+c)\alpha + (a+b)\beta + (b+c)\gamma &= 0 \label{eq:eq_5}
 \end{align}
+Writing \eqref{eq:eq_5} in matrix form,
+\begin{align}
+    \myvec{a+c \\ a+b \\ b+c}^T \myvec{1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1} \myvec{\alpha \\ \beta \\ \gamma} = 0
+\end{align}
 Let,
 \begin{align}
     \vec{A_1} = \myvec{1 & 0 & 0 \\ 0 & 0 & 0 \\ 0 & 0 & 0}; \:
