--- a/Assignment_11/Assignment_11.tex
+++ b/Assignment_11/Assignment_11.tex
@@ -306,5 +306,5 @@ The solutions to \eqref{eq:eq_11} are,
 \begin{align}
     a=b=c=0; \quad a=b=c=1
 \end{align}
-Since there is no trivial solution, $(\alpha + \beta)$, $(\beta + \gamma)$ and $(\gamma + \alpha)$ are linearly independent
+Since there is no trivial solution, $(\alpha + \beta)$, $(\beta + \gamma)$ and $(\gamma + \alpha)$ are linearly dependent
 \end{document}
