--- a/Assignment_12/Assignment_12.tex
+++ b/Assignment_12/Assignment_12.tex
@@ -153,7 +153,7 @@ columns=fullflexible
      \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
      \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
 \vspace{3cm}
-\title{Matrix theory Assignment 12}
+\title{Matrix theory Assignment 11}
 \author{K R Sai Pranav}
 %\title{
 %	\logo{Matrix Analysis through Octave}{\begin{center}\includegraphics[scale=.24]{tlc}\end{center}}{}{HAMDSP}
@@ -243,7 +243,7 @@ columns=fullflexible
 %{\underline{\Large \bf Determinant}}
 \end{center}
 \begin{abstract}
-This document explains zero and Identity transformations.
+This document contains the concept of sub space.
 \end{abstract}
 Download all python codes from 
 %
@@ -267,7 +267,14 @@ Suppose vector space $\vec{V}$ has dimension n. Table \ref{table:1} provides the
 \begin{center}
 \begin{tabular}{|l|l|l|}
 \hline
+
+\multicolumn{3}{|c|}{$\vec{v}^T = \myvec{v_1 & v_2 & \cdots & v_n}$} \\[1ex]
+\hline
+
 \textbf{Properties} & \textbf{Zero Transformation} & \textbf{Identity Transformation} \\[1ex]
+\hline
+
+Transformation & $T_0\vec{v} = \myvec{0 \\ 0 \\ \vdots \\ 0}$ & $T_I\vec{v} = \myvec{v_1 \\ v_2 \\ \vdots \\ v_n}$ \\[0.5ex] 
 \hline
 
 Range & Zero subspace \{0\} & whole vector space $\vec{V}$\\[0.5ex] 
